# simd

./: CMakeLists.txt  Doxyfile.in  README.md  libsimd-config.cmake.in
simd/: alloc.hpp  config.hpp  pack.hpp  traits.hpp
